[gd_scene load_steps=5 format=3 uid="uid://c6h6ludy3icyj"]

[ext_resource type="Script" path="res://Spaceship/spaceship.gd" id="1_potsk"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ee7fw"]

[sub_resource type="SphereMesh" id="SphereMesh_t4h2w"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_nub4b"]
radius = 3.0

[node name="Spaceship" type="CharacterBody3D"]
script = ExtResource("1_potsk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_ee7fw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_t4h2w")

[node name="TargetArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="TargetArea"]
shape = SubResource("CylinderShape3D_nub4b")

[connection signal="area_entered" from="TargetArea" to="." method="_on_target_area_area_entered"]
[connection signal="area_exited" from="TargetArea" to="." method="_on_target_area_area_exited"]
